<resources>
    <string name="app_name">Coleção de Jogos</string>
    <string name="secondActivityTitle">Sobre</string>
    <string name="thirdActivityTitle">Adicionar Jogo</string>
    <string name="fourthActivityTitle">Jogo</string>
    <string name="fifthActivityTitle">Adicionar Produtora</string>
    <string name="aboutBtn">Sobre o Aplicativo</string>
    <string name="nameTxt">Nome do Desenvolvedor</string>
    <string name="devNameTxt" translatable="false">André Silva Poletto</string>
    <string name="raTxt">R.A. do Desenvolvedor</string>
    <string name="devRaTxt" translatable="false">1581635</string>
    <string name="classTxt">Curso do Desenvolvedor</string>
    <string name="devClasstxt">Engenharia de Computação</string>
    <string name="appTitleHintTxt">Aplicativo</string>
    <string name="aboutTxt">Este aplicativo lhe permite cadastrar e gerenciar seus jogos de um modo fácil e intuitivo. Evitando compras de jogos repetidos ou ainda emprestimos esquecidos.</string>
    <string name="addGameBtn">Adicionar jogo +</string>
    <string name="gameTitleTxt">Nome</string>
    <string name="producerTxt">Produtora</string>
    <string name="plataformTxt">Plataforma</string>
    <string name="rateTxt">Nota</string>
    <string name="dateTxt">Lançamento</string>
    <string name="xBoxTxt" translatable="false">Xbox One </string>
    <string name="ps4Txt" translatable="false">Playstation 4</string>
    <string name="nintendoTxt" translatable="false">Nintendo Switch</string>
    <string name="compTxt">Computador</string>
    <string name="addGameInfoBtn">Adicionar</string>
    <string name="saveBtn">Salvar</string>
    <string name="menuEditItem">editar</string>
    <string name="excludeMenuItem">excluir</string>
    <string name="nullMsgTxt" translatable="false">null</string>
    <string name="successMsg">Jogo</string>
    <string name="endSuccessMsg">cadastrado com sucesso</string>
    <string name="deleteTxt">Deletar</string>
    <string name="editItemTxt">Editar</string>
    <string name="title_alert">Atenção</string>
    <string name="msgAlert">Deseja realmente deletar este item?</string>
    <string name="option_yes">Sim</string>
    <string name="option_no">Não</string>
    <string name="addProducerTxt">Adicionar Produtora</string>
</resources>
